configs/flux-operator/overlays/nishir-tailnet/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: flux-operator-receivers
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    name: flux-operator-receivers
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    namespace: flux-system
